--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "bootstrap": "^5.3.7",
     "jspdf": "^3.0.1",
     "react": "^19.1.0",
